--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
+        "vite": "^6.3.5"
+    },
+    "dependencies": {
+        "quill": "^2.0.3"
     }
 }
