--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/postcss": "^4.1.10",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^4.1.10",
         "vite": "^6.3.5"
     },
     "dependencies": {
+        "flowbite": "^3.1.2",
         "quill": "^2.0.3"
     }
 }
